--- a/Portfolio-CV/index.html
+++ b/Portfolio-CV/index.html
@@ -192,8 +192,9 @@
              <aside class="portfolio-card-info">
                  <div>
                      <h3>Proyecto 1</h3>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
+                     <p style="font-size: 15px;">
+                        Este proyecto es una aplicación backend construida con Spring Boot, donde se gestionan dos entidades principales: buses y marcas. Se desarrollaron endpoints para listar buses, agregar marcas y asignar marcas a los buses. La base de datos está organizada en dos tablas principales, y la API expone las funcionalidades necesarias para interactuar con los datos de estos objetos.
+                        Por parte del frontend, se utilizó React, implementando componentes para mostrar la lista de buses y marcas. La comunicación entre el frontend y el backend se realiza a través de llamadas a la API RESTful.
                      </p>
                  </div>
              </aside>
@@ -265,17 +266,20 @@
             <article class="portfolio-modal">
                 <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
                 <div class="portfolio-info">
-                    <h3>Nombre del proyecto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eveniet consequatur veniam dolorum tempore expedita soluta nobis eaque iusto eos non, at blanditiis nostrum ex ducimus quo libero aspernatur ullam?</p>
+                    <h3>Proyecto de simple de bus</h3>
+                    <p> Herramientas: Spring Boot, React, Mysql, Postman.
+                        Se desplegaron en Render la parte backend y la base de datos en Railway, mientras que la parte frontend fue desplegada en Netlify.</p>
                     <aside class="portfolio-details">
                         <small><b>CLIENTE 1:</b></small>
-                        <small>Nombre del cliente</small>
+                        <small>Proyecto Personal</small>
                         <small><b>FECHA:</b></small>
-                        <small>fecha del trabajo</small>
+                        <small>03/04/2025</small>
                         <small><b>TIPO:</b></small>
-                        <small>tipo de proyecto</small>
+                        <small>Full stack</small>
                         <small><b>ENLACE:</b></small>
-                        <small><a href="" target="_blank" rel="noopener">aqui va enlace</a></small>
+                        <small><a href="https://github.com/JhonatanNY/ParteFrontEnd" target="_blank" rel="noopener">Repositorio del frontend</a></small>
+                        <small><b>ENLACE:</b></small>
+                        <small><a href="https://github.com/JhonatanNY/bus_api" target="_blank" rel="noopener">Repositorio del backend</a></small>
                     </aside>
                 </div>
             </article>
