--- a/Portfolio-CV/index.html
+++ b/Portfolio-CV/index.html
@@ -203,9 +203,9 @@
              <img src="assets/portfolio-2.jpg" alt="trabajo 1">
              <aside class="portfolio-card-info">
                  <div>
-                     <h3>Proyecto 2</h3>
+                     <h3>Proyecto Pendiente</h3>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
+                        Falta
                      </p>
                  </div>
              </aside>
@@ -214,10 +214,10 @@
              <img src="assets/portfolio-3.jpg" alt="trabajo 1">
              <aside class="portfolio-card-info">
                  <div>
-                     <h3>Proyecto 3</h3>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
-                     </p>
+                    <h3>Proyecto Pendiente</h3>
+                    <p>
+                       Falta
+                    </p>
                  </div>
              </aside>
             </a>
@@ -225,10 +225,10 @@
              <img src="assets/portfolio-4.jpg" alt="trabajo 1">
              <aside class="portfolio-card-info">
                  <div>
-                     <h3>Proyecto 4</h3>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
-                     </p>
+                    <h3>Proyecto Pendiente</h3>
+                    <p>
+                       Falta
+                    </p>
                  </div>
              </aside>
             </a>
@@ -236,10 +236,10 @@
              <img src="assets/portfolio-5.jpg" alt="trabajo 1">
              <aside class="portfolio-card-info">
                  <div>
-                     <h3>Proyecto 5</h3>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
-                     </p>
+                    <h3>Proyecto Pendiente</h3>
+                    <p>
+                       Falta
+                    </p>
                  </div>
              </aside>
             </a>
@@ -247,10 +247,10 @@
              <img src="assets/portfolio-6.jpg" alt="trabajo 1">
              <aside class="portfolio-card-info">
                  <div>
-                     <h3>Proyecto 6</h3>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam aliquam fugiat dicta dolores error dolorum aperiam, laborum necessitatibus suscipit vel optio aliquid libero amet ullam temporibus vero, nisi beatae?
-                     </p>
+                    <h3>Proyecto Pendiente</h3>
+                    <p>
+                       Falta
+                    </p>
                  </div>
              </aside>
             </a>
@@ -293,7 +293,7 @@
             <article class="portfolio-modal">
                 <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
                 <div class="portfolio-info">
-                    <h3>Nombre del proyecto</h3>
+                    <h3>Proyecto pendientes</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eveniet consequatur veniam dolorum tempore expedita soluta nobis eaque iusto eos non, at blanditiis nostrum ex ducimus quo libero aspernatur ullam?</p>
                     <aside class="portfolio-details">
                         <small><b>CLIENTE 2:</b></small>
