cambios en imagenes

--- a/Portfolio-CV/index.html
+++ b/Portfolio-CV/index.html
@@ -234,7 +234,7 @@
         <div class="container">
             <h2 class="section-title">Mis Trabajos</h2>
             <a href="#trabajo-1" class="portfolio-card">
-                <img src="assets/portfolio-1.jpg" alt="trabajo 1">
+                <img src="assets/buses.jpg" alt="trabajo 1">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto 1</h3>
@@ -246,13 +246,13 @@
                             de estos objetos.
                             Por parte del frontend, se utilizó React, implementando componentes para mostrar la lista de
                             buses y marcas. La comunicación entre el frontend y el backend se realiza a través de
-                            llamadas a la API RESTful.
+                            llamadas a la API REST o servicio Rest.
                         </p>
                     </div>
                 </aside>
             </a>
             <a href="#trabajo-2" class="portfolio-card">
-                <img src="assets/portfolio-2.jpg" alt="trabajo 1">
+                <img src="assets/proyectoGuitarras.jpg" alt="trabajo 1">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto tienda de Guitarras (React)</h3>
@@ -264,12 +264,15 @@
                 </aside>
             </a>
             <a href="#trabajo-3" class="portfolio-card">
-                <img src="assets/portfolio-3.jpg" alt="trabajo 1">
+                <img src="assets/portfolio-3.jpg" alt="Rastreador de calorías">
                 <aside class="portfolio-card-info">
                     <div>
-                        <h3>Proyecto Pendiente</h3>
+                        <h3>Proyecto Rastreador de Calorías (React)</h3>
                         <p>
-                            Falta
+                            Aplicación en React que permite registrar comidas y ejercicios, calcular calorías en esta
+                            app se
+                            maneja el estado con useReducer y se persiste los datos en LocalStorage.
+                            Desplegado en Netlify.
                         </p>
                     </div>
                 </aside>
@@ -334,8 +337,8 @@
                         <small><b>TIPO:</b></small>
                         <small>Full stack</small>
                         <small><b>ENLACE:</b></small>
-                        <small><a href="https://bus-site-example.netlify.app/" target="_blank"
-                                rel="noopener">Enlace de sitio</a></small>
+                        <small><a href="https://bus-site-example.netlify.app/" target="_blank" rel="noopener">Enlace de
+                                sitio</a></small>
                         <small><b>ENLACE:</b></small>
                         <small><a href="https://github.com/JhonatanNY/bus_api" target="_blank"
                                 rel="noopener">Repositorio del backend</a></small>
@@ -389,9 +392,13 @@
                 <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
                 <div class="portfolio-info">
                     <h3>Nombre del proyecto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eveniet consequatur veniam
-                        dolorum tempore expedita soluta nobis eaque iusto eos non, at blanditiis nostrum ex ducimus quo
-                        libero aspernatur ullam?</p>
+                    <p>
+                        Desarrollé una aplicación en React y Vite que permite registrar comidas y actividades,
+                        calcular calorías consumidas y quemadas en esta app se manejo estado global con
+                        <b>useReducer</b>,
+                        y se almaceno datos de manera persistente con <b>LocalStorage</b>.
+                        El proyecto está desplegado en Netlify.
+                    </p>
                     <aside class="portfolio-details">
                         <small><b>CLIENTE 3:</b></small>
                         <small>Nombre del cliente</small>
@@ -400,7 +407,11 @@
                         <small><b>TIPO:</b></small>
                         <small>tipo de proyecto</small>
                         <small><b>ENLACE:</b></small>
-                        <small><a href="" target="_blank" rel="noopener">aqui va enlace</a></small>
+                        <small><a href="https://restreadorcalorias.netlify.app/" target="_blank" rel="noopener">Ver
+                                sitio</a></small>
+                        <small><b>ENLACE:</b></small>
+                        <small><a href="https://github.com/JhonatanNY/Proyecto-de-rastreador-de-calorias-TS" target="_blank"
+                                rel="noopener">Repositorio</a></small>
                     </aside>
                 </div>
             </article>
