agregando proyecto(falta terminar) al cv

--- a/Portfolio-CV/index.html
+++ b/Portfolio-CV/index.html
@@ -234,10 +234,10 @@
         <div class="container">
             <h2 class="section-title">Mis Trabajos</h2>
             <a href="#trabajo-1" class="portfolio-card">
-                <img src="assets/buses.jpg" alt="trabajo 1">
+                <img src="assets/buses-1.jpg" alt="trabajo 1">
                 <aside class="portfolio-card-info">
                     <div>
-                        <h3>Proyecto 1</h3>
+                        <h3>Proyecto Simple de bus</h3>
                         <p style="font-size: 15px;">
                             Este proyecto es una aplicación backend construida con Spring Boot, donde se gestionan dos
                             entidades principales: buses y marcas. Se desarrollaron endpoints para listar buses, agregar
@@ -252,7 +252,7 @@
                 </aside>
             </a>
             <a href="#trabajo-2" class="portfolio-card">
-                <img src="assets/proyectoGuitarras.jpg" alt="trabajo 1">
+                <img src="assets/proyectoGuitarras-1.jpg" alt="trabajo 1">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto tienda de Guitarras (React)</h3>
@@ -264,7 +264,23 @@
                 </aside>
             </a>
             <a href="#trabajo-3" class="portfolio-card">
-                <img src="assets/portfolio-3.jpg" alt="Rastreador de calorías">
+                <img src="assets/consumoYPropinas-1.jpg" alt="Rastreador de calorías">
+                <aside class="portfolio-card-info">
+                    <div>
+                        <h3>Proyecto Calculadora de consumo y propinas (React)</h3>
+                        <p>
+                            Aplicación desarrollada en React que permite calcular el costo total de un consumo
+                            incluyendo la propina. Se maneja el estado de la aplicación con <code>useState</code>,
+                            mostrando en tiempo real el total a pagar por persona.
+                            La interfaz es dinámica y fácil de usar, me ayudo a practicar conceptos de componentes,
+                            props y hooks en React.
+                            Desplegado en Netlify.
+                        </p>
+                    </div>
+                </aside>
+            </a>
+            <a href="#trabajo-4" class="portfolio-card">
+                <img src="assets/imagenCalorias-1.jpg" alt="Rastreador de calorías">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto Rastreador de Calorías (React)</h3>
@@ -273,17 +289,6 @@
                             app se
                             maneja el estado con useReducer y se persiste los datos en LocalStorage.
                             Desplegado en Netlify.
-                        </p>
-                    </div>
-                </aside>
-            </a>
-            <a href="#trabajo-4" class="portfolio-card">
-                <img src="assets/portfolio-4.jpg" alt="trabajo 1">
-                <aside class="portfolio-card-info">
-                    <div>
-                        <h3>Proyecto Pendiente</h3>
-                        <p>
-                            Falta
                         </p>
                     </div>
                 </aside>
@@ -391,7 +396,44 @@
             <article class="portfolio-modal">
                 <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
                 <div class="portfolio-info">
-                    <h3>Nombre del proyecto</h3>
+                    <h3>Proyecto Calculadora de consumo y propinas</h3>
+                    <p>
+                        Desarrollé una aplicación en React y Vite que permite registrar comidas y actividades,
+                        calcular calorías consumidas y quemadas en esta app se manejo estado global con
+                        <b>useReducer</b>,
+                        y se almaceno datos de manera persistente con <b>LocalStorage</b>.
+                        El proyecto está desplegado en Netlify.
+                    </p>
+                    <aside class="portfolio-details">
+                        <small><b>CLIENTE 3:</b></small>
+                        <small>Nombre del cliente</small>
+                        <small><b>FECHA:</b></small>
+                        <small>fecha del trabajo</small>
+                        <small><b>TIPO:</b></small>
+                        <small>tipo de proyecto</small>
+                        <small><b>ENLACE:</b></small>
+                        <small><a href="https://propinasyconsumots.netlify.app/" target="_blank" rel="noopener">Ver
+                                sitio</a></small>
+                        <small><b>ENLACE:</b></small>
+                        <small><a href="https://github.com/JhonatanNY/ProyectoCalculadoraPropinasYConsumo"
+                                target="_blank" rel="noopener">Repositorio</a></small>
+                    </aside>
+                </div>
+            </article>
+        </div>
+    </article>
+    <article class="modal" id="trabajo-4">
+        <div class="modal-content">
+            <a href="#cerrar" class="modal-close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                        d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z" />
+                </svg>
+            </a>
+            <article class="portfolio-modal">
+                <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
+                <div class="portfolio-info">
+                    <h3>Proyecto de ratreador de calorias</h3>
                     <p>
                         Desarrollé una aplicación en React y Vite que permite registrar comidas y actividades,
                         calcular calorías consumidas y quemadas en esta app se manejo estado global con
@@ -410,37 +452,8 @@
                         <small><a href="https://restreadorcalorias.netlify.app/" target="_blank" rel="noopener">Ver
                                 sitio</a></small>
                         <small><b>ENLACE:</b></small>
-                        <small><a href="https://github.com/JhonatanNY/Proyecto-de-rastreador-de-calorias-TS" target="_blank"
-                                rel="noopener">Repositorio</a></small>
-                    </aside>
-                </div>
-            </article>
-        </div>
-    </article>
-    <article class="modal" id="trabajo-4">
-        <div class="modal-content">
-            <a href="#cerrar" class="modal-close">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z" />
-                </svg>
-            </a>
-            <article class="portfolio-modal">
-                <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
-                <div class="portfolio-info">
-                    <h3>Nombre del proyecto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eveniet consequatur veniam
-                        dolorum tempore expedita soluta nobis eaque iusto eos non, at blanditiis nostrum ex ducimus quo
-                        libero aspernatur ullam?</p>
-                    <aside class="portfolio-details">
-                        <small><b>CLIENTE 4:</b></small>
-                        <small>Nombre del cliente</small>
-                        <small><b>FECHA:</b></small>
-                        <small>fecha del trabajo</small>
-                        <small><b>TIPO:</b></small>
-                        <small>tipo de proyecto</small>
-                        <small><b>ENLACE:</b></small>
-                        <small><a href="" target="_blank" rel="noopener">aqui va enlace</a></small>
+                        <small><a href="https://github.com/JhonatanNY/Proyecto-de-rastreador-de-calorias-TS"
+                                target="_blank" rel="noopener">Repositorio</a></small>
                     </aside>
                 </div>
             </article>
